--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css"
-    />
-    <title>Project</title>
-    <link
-      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize.min.css"
     />
+
+    <title>Project</title>
+
     <link rel="stylesheet" href="./css/styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -48,7 +42,7 @@
     </header>
 
     <main>
-      <section class="hero">
+      <section class="top">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button" class="link">Order Service</button>
       </section>
