--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <header>
       <nav class="page">
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a class="logo" href="./index.html"
+          >Web<span class="studio">Studio</span></a
+        >
         <ul class="page-nav">
           <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="" class="link">Portfolio</a></li>
@@ -28,7 +30,7 @@
         </ul>
       </nav>
       <address>
-        <ul class="page-contacts">
+        <ul class="contacts">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
@@ -43,37 +45,37 @@
 
     <main>
       <section class="top">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="businnes">Effective Solutions for Your Business</h1>
         <button type="button" class="link">Order Service</button>
       </section>
 
       <section class="features">
-        <h2>Our Features</h2>
+        <h2 class="our">Our Features</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="titel">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="titel">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="titel">Diligence</h3>
+            <p class="text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="titel">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -82,17 +84,17 @@
       </section>
 
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="top_title">Our Team</h2>
         <ul>
-          <li>
+          <li class="mark">
             <img
               src="./images/img1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="240"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="titel">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img
@@ -101,8 +103,8 @@
               width="264"
               height="240"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="titel">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -111,8 +113,8 @@
               width="264"
               height="240"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="titel">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -121,14 +123,14 @@
               width="264"
               height="240"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="titel">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
 
       <section class="portfolio-list">
-        <h2>Our Portfolio</h2>
+        <h2 class="top_title">Our Portfolio</h2>
         <ul class="images">
           <li>
             <img
@@ -137,8 +139,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="titel">Banking App</h3>
+            <p class="text">App</p>
           </li>
           <li>
             <img
@@ -147,8 +149,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="titel">Cashless Payment</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -157,8 +159,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="titel">Meditation App</h3>
+            <p class="text">App</p>
           </li>
           <li>
             <img
@@ -167,8 +169,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="titel">Taxi Service</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -177,8 +179,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="titel">Screen Illustrations</h3>
+            <p class="text">Design</p>
           </li>
           <li>
             <img
@@ -187,8 +189,8 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="titel">Online Courses</h3>
+            <p class="text">Marketing</p>
           </li>
         </ul>
       </section>
@@ -196,7 +198,7 @@
 
     <footer class="footer">
       <a href="./index.html"><span>Web</span>Studio</a>
-      <p>
+      <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
