--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
 
     <title>Project</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -21,7 +29,7 @@
     <header>
       <nav class="page">
         <a class="logo" href="./index.html"
-          >Web<span class="studio">Studio</span></a
+          >Web<span class="logo_top">Studio</span></a
         >
         <ul class="page-nav">
           <li><a href="./index.html" class="link">Studio</a></li>
@@ -50,7 +58,7 @@
       </section>
 
       <section class="features">
-        <h2 class="our">Our Features</h2>
+        <h2 class="titel_top">Our Features</h2>
         <ul>
           <li>
             <h3 class="titel">Strategy</h3>
@@ -197,7 +205,9 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html"><span>Web</span>Studio</a>
+      <a class="logo" href="./index.html"
+        >Web<span class="logo_footer">Studio</span></a
+      >
       <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
