--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
@@ -54,7 +54,7 @@
     <main>
       <section class="top">
         <h1 class="businnes">Effective Solutions for Your Business</h1>
-        <button type="button" class="link">Order Service</button>
+        <button type="button" class="button">Order Service</button>
       </section>
 
       <section class="features">
@@ -208,6 +208,7 @@
       <a class="logo" href="./index.html"
         >Web<span class="logo_footer">Studio</span></a
       >
+
       <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
