css/styles.css,index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="contacts">
           <li>
             <a href="mailto:info@devstudio.com" class="link"
@@ -104,7 +104,7 @@
             <h3 class="titel">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="mark">
             <img
               src="./images/img2.jpg"
               alt="Tom Ford"
@@ -124,7 +124,7 @@
             <h3 class="titel">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="mark">
             <img
               src="./images/img4.jpg"
               alt="Daniel Wilson"
